# PythonApi

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  celery_app.py  docker-compose.yml  main.py  pyproject.toml  tasks.db
