[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Skullffee",email = "silvamike1710@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
        "fastapi (>=0.115.0,<1.0.0)",
        "uvicorn[standard] (>=0.34.0,<1.0.0)",
        "sqlalchemy (>=2.0.49,<3.0.0)",
        "aiosqlite (>=0.22.1,<0.23.0)",
        "python-dotenv (>=1.2.2,<2.0.0)",
        "redis (>=5.0.0,<6.0.0)",
        "celery (>=5.4.0,<6.0.0)",
        "python-multipart (>=0.0.20,<1.0.0)",
        "pydantic (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
